--- a/ProAgil-App/package.json
+++ b/ProAgil-App/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^4.6.0",
     "ngx-bootstrap": "^6.2.0",
